welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:20: error: expected start of definition
override def run (){
         ^PictureMono1:29: error: Unmatched closing brace '}' ignored here
}
^